add user to test fixture and updated login tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# Coming soon!
+steve:
+  name: Smyhk King
+  email: smyhk@example.com
+  password_digest: <%= User.digest('password123') %>
