--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,20 @@ archer:
   name: Sterling archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password123') %>
+
+lana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password123') %>
+
+malory:
+  name: Malory archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password123') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password123') %>
+<% end %>
