--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,25 +5,35 @@ steve:
   email: smyhk@example.com
   password_digest: <%= User.digest('password123') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 archer:
   name: Sterling archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password123') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password123') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 malory:
   name: Malory archer
   email: boss@example.gov
   password_digest: <%= User.digest('password123') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password123') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 <% end %>
