--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -35,3 +35,27 @@ article_<%= n %>:
   created_at: <%= 42.days.ago %>
   user: steve
 <% end %>
+
+ants:
+  title: "Hello Dolly"
+  body: "Oh, is that what you want? Because that's how you get ants!"
+  created_at: <%= 2.years.ago %>
+  user: archer
+
+zone:
+  title: "Hello Dolly"
+  body: "Danger zone!"
+  created_at: <%= 3.days.ago %>
+  user: archer
+
+tone:
+  title: "Hello Dolly"
+  body: "I'm sorry. Your words made sense, but your sarcastic tone did not."
+  created_at: <%= 10.minutes.ago %>
+  user: lana
+
+van:
+  title: "Hello Dolly"
+  body: "Dude, this van's, like, rolling probable cause."
+  created_at: <%= 4.hours.ago %>
+  user: lana
